--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
 
 @ARTICLE{10477599,
   abbr={IEEE MWTL},
-	award={Top IMS 2024 Papers},
+	award={Top Papers of IMS 2024},
+	selected=True,
 	abstract={In this work, we experimentally demonstrate, for the first time, a fully wireless coherent distributed antenna array (CDA) performing distributed transmit and receive beamforming for a down-range sensing application at microwave frequencies without the need for external frequency and time references such as global navigation satellite systems (GNSSs). We build on previous methods utilizing a continuous-wave (CW) two- tone frequency transfer system and a pulsed two-tone time synchronization system to align the distributed platforms in both time and frequency. Coherent transmit and receive beamforming was performed utilizing 100 MHz linear frequency modulation (LFM) waveforms for sensing. Two experiments were performed: one imaging a static scene and one imaging a moving pedestrian holding a corner reflector. The beamforming gain is quantified in the static measurements yielding a median beamforming gain of 2.12 dB and a maximum gain of 2.86 dB (96.5% coherent beamforming gain).},
   author={Merlo, Jason M. and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A.},
   journal={IEEE Microwave and Wireless Technology Letters}, 
@@ -74,7 +75,7 @@
 	award = {Young Scientist Award},
 	booktitle = {International Union of Radio Scientists General Assembly},
 	month = {August},
-	pdf = {YSASummaryMerloJason.pdf},
+	pdf = {2023_ursi_gass_nlos_synchronization.pdf},
 	selected = {true},
 	doi = {10.23919/URSIGASS57860.2023.10265506},
 	slides = {C03-4_1020_Merlo.pdf},
